Fix modal content overflow in FF

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -40,6 +40,7 @@
     @media (--viewportMedium) {
       flex-basis: 576px;
       min-height: auto;
+      height: auto;
     }
   }
 }
